--- a/config/gcode_macro.cfg
+++ b/config/gcode_macro.cfg
@@ -1,10 +1,4 @@
-# QIDI Plus4 V1.6.0
-#20241102 
-#1. 起始代码腔室加热将在调平后开启
-#2. 腔室加热开启必须带着热床升温
-#3. M141和M191宏定义修改，热床低于70会开启热床加热
-#4. 擦料时取消打印，会先移动一点出来
-#5. 开始打印时增加倾斜校准
+# QIDI Plus4 MAINLINE KLIPPER V12
 
 [gcode_macro _CG28]
 gcode:
@@ -12,103 +6,96 @@ gcode:
         G28
     {% endif %}
 
-[gcode_macro zoffset]
-gcode:
-    SET_GCODE_OFFSET Z={printer.probe.last_z_result} MOVE=1
-
-# Development test
-[gcode_macro test_zoffset]
-gcode:
-    G28
-    get_zoffset
-    G1 X{150 - printer.probe["x_offset"]} Y{150 - printer.probe["y_offset"]} F9000
-    G1 Z10 F600
-    probe
-    M400
-    G4 P5000
-    G1 Z10 F600
-
-[gcode_macro move_subzoffset]
-gcode:
-    G1 Z{printer.probe.last_z_result} F600
-
-[gcode_macro get_zoffset]
-gcode:
-    TOGGLE_CHAMBER_FAN
-    G1 Z10 F600
-    Z_VIBRATE
-    QIDI_PROBE_PIN_1
-    m204 S50
-    G4 P500
-    probe probe_speed=5 lift_speed=5 samples=5 sample_retract_dist=5
-    move_subzoffset
-    M114
-    {% set p=(-0.11 + printer.gcode_move.homing_origin.z)|float %}
-    SET_KINEMATIC_POSITION Z={p}
-    G1 Z30 F600
-    QIDI_PROBE_PIN_2
-    m204 S10000
-    TOGGLE_CHAMBER_FAN
-
-[gcode_macro save_zoffset]
-gcode:
-    {% if printer.gcode_move.homing_origin.z < 0.5 %}
-       SAVE_VARIABLE VARIABLE=z_offset VALUE={printer.gcode_move.homing_origin.z}
+[homing_override]
+axes:xyz
+gcode: 
+    {% set HOME_CUR = 1 %}
+    {% set driver_config = printer.configfile.settings['tmc2240 stepper_x'] %}
+    {% set RUN_CUR = driver_config.run_current %}
+    {% set HOLD_CUR = driver_config.hold_current %}
+    m204 S20000
+    M220 S100
+    {% if params.Y is defined %}
+		SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CUR * 0.9} 
+		G28 Y
+		SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CUR}  
+        BEEP I=1 DUR=100          
+       G1 Y10 F1200
+    {% endif %}
+    {% if params.X is defined %}
+	    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR * 0.7} 
+        G28 X
+		SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR}     
+        BEEP I=1 DUR=100       
+        G1 X10 F1200
+    {% endif %}
+    {% if params.Z is defined %}
+        {% if "y" not in printer.toolhead.homed_axes %}
+          G28 Y
+        {% endif %}
+        {% if "x" not in printer.toolhead.homed_axes %}
+          G28 X
+        {% endif %}
+        # G1 X{ 150 + (range(-5, 5) | random) / 10 } Y{ 150 + (range(-5, 5) | random) / 10 } F7800
+        G1 X150 Y150
+	G28 Z
+	G1 Z30 F480
     {% endif %}
 
-[gcode_macro set_zoffset]        
-gcode:
-    {% set z = printer.save_variables.variables.z_offset %}
-    SET_GCODE_OFFSET Z={z} MOVE=0
-
-# Specialized for power lose recovery
-[gcode_macro CLEAR_NOZZLE_PLR]
-gcode:
-    {% set hotendtemp = params.HOTEND|default(250)|int %}
-    {% if (printer.gcode_move.position.z ) < 35 %}
-        G1 Z35 F900
-    {% else %}
+    {% if params.X is undefined %}
+    {% if params.Y is undefined %}
+    {% if params.Z is undefined %}
+        SET_KINEMATIC_POSITION X=0
+        SET_KINEMATIC_POSITION Y=0
+        SET_KINEMATIC_POSITION Z={printer.toolhead.axis_maximum.z-10}
         G91
-        G1 Z{5} F900 
+        G1 Z7 F600	
+        G1 X5 F2400
+        G1 Y5 F2400
+        G4 P2000
+    	SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CUR * 0.9} 
+    	G28 Y
+    	SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CUR} 
+        BEEP I=1 DUR=100        
+        G1 Y10 F5200
+    
+        SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR * 0.8} 
+        G28 X
+    	SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR} 
+        BEEP I=1 DUR=100  
+        G1 X10 F5200
+
+        SET_KINEMATIC_POSITION Z={printer.toolhead.axis_maximum.z-10}
+
         G90
+        # G1 X{ 150 + (range(-5, 5) | random) / 10 } Y{ 150 + (range(-5, 5) | random) / 10 } F7800
+        G1 X150 Y150
+        G28 Z
+        G1 Z30  F600
     {% endif %}
-    G1 X56 F12000
-    G1 Y310 F12000
-    G1 Y324 F600
-    G1 X95 F600
-    M400
+    {% endif %}
+    {% endif %}
+    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={RUN_CUR} 
+    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={RUN_CUR} 
+    M204 S10000
+    G90
 
-    M106 S0
-    M109 S{hotendtemp}
-
-    G92 E0
-    G1 E5 F50
-    G92 E0
-    G1 E80 F200
-    G92 E0
-    G1 E-2 F200
-    G4 P300
-
-    M106 S255
-    G1 Y316 F30000
-    G1 Y320 F3000
-    G1 Y316 F30000
-    G1 Y320 F3000
-    G1 Y316 F30000
-    G1 Y320 F3000
-    G1 Y316 F12000
-    G1 Y312 F600
 
 [gcode_macro CLEAR_NOZZLE]
 gcode:
+    {% set cooldown = params.COOLDOWN|default(1)|int %}
     {% set hotendtemp = params.HOTEND|default(250)|int %}
-    {% if (printer.gcode_move.position.z ) < 35 %}
-        G1 Z35 F900
-    {% else %}
-        G91
-        G1 Z{5} F900 
-        G90
+    {% if "y" not in printer.toolhead.homed_axes %}
+        G28 Y
     {% endif %}
+    {% if "x" not in printer.toolhead.homed_axes %}
+        G28 X
+    {% endif %}
+    M104 S{hotendtemp}
+    G1 X95 F12000
+    G1 Y300 F12000
+    G1 Y324 F600
+    G1 Y310 F1200
     G1 X56 F12000
     G1 Y310 F12000
     G1 Y324 F600
@@ -120,52 +107,53 @@ gcode:
     G92 E0
     G1 E80 F200
     G92 E0
-    G1 E-2 F200
+    G10
 
     M106 S255
     G4 P5000
-    M104 S140
-    G1 Y318 F9000
-    G1 Y322 F600
-    G1 Y318 F9000
-    G1 Y322 F600
-    G1 Y308 F30000
-    G1 Y324 F600
-
-    G1 X124 E-1 F1000 
-
-    TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={170}
-
-    G1 X133 F200
-    G1 Y321 F200
-    G2 I0.5 J0.5 F600
-    G2 I0.5 J0.5 F600
-    G2 I0.5 J0.5 F600
-
-    G1 Y319 F150
-    G1 X132 
-    G1 Y324
-    G1 X131 
-    G1 Y319
-    G1 X130
-    G1 Y324
-    G1 X129
-    G1 Y319
-
-    G1 X113 F200
-    G1 Y320
-    G1 X125
-    G1 X113
-    G1 X125
-    G2 I0.5 J0.5 F200
-    G2 I0.5 J0.5 F200
-    G2 I0.5 J0.5 F200    
-
-    G1 Y300 F600
-    G1 X95 F12000
-    G1 Y314 F9000
-    G1 Y324 F600
-
+    {% if cooldown > 0 %}
+      M104 S140
+      G1 Y318 F9000
+      G1 Y322 F600
+      G1 Y318 F9000
+      G1 Y322 F600
+      G1 Y308 F30000
+      G1 Y324 F600
+  
+      G1 X124 E-1 F1000 
+      
+      TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={150}
+  
+      G1 X133 F200
+      G1 Y321 F200
+      G2 I0.5 J0.5 F600
+      G2 I0.5 J0.5 F600
+      G2 I0.5 J0.5 F600
+  
+      G1 Y319 F150
+      G1 X132 
+      G1 Y324
+      G1 X131 
+      G1 Y319
+      G1 X130
+      G1 Y324
+      G1 X129
+      G1 Y319
+  
+      G1 X113 F200
+      G1 Y320
+      G1 X125
+      G1 X113
+      G1 X125
+      G2 I0.5 J0.5 F200
+      G2 I0.5 J0.5 F200
+      G2 I0.5 J0.5 F200
+  
+      G1 Y300 F600
+      G1 X95 F12000
+      G1 Y314 F9000
+      G1 Y324 F600
+    {% endif %}
     G1 X58 F12000
     G1 X78 F12000
     G1 Y324
@@ -198,9 +186,12 @@ gcode:
 
     M400
     M118 Nozzle cleared
-    G1 Y10 F12000
-    G1 X10 F12000
-    TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={150}
+    G1 Y300 F12000
+    # G1 X10 F12000
+    {% if cooldown > 0 %}
+      M104 S140
+      TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={150}
+    {% endif %}
     M107
     M106 P2 S0
     M400
@@ -210,38 +201,85 @@ gcode:
 [gcode_macro PRINT_START]
 gcode:
     AUTOTUNE_SHAPERS
-
+    {% if printer["temperature_fan board_fan"] is defined %}
+        SET_TEMPERATURE_FAN_TARGET TEMPERATURE_FAN=board_fan TARGET=45
+    {% endif %}
     {% set bedtemp = params.BED|int %}
     {% set hotendtemp = params.HOTEND|int %}
     {% set chambertemp = params.CHAMBER|default(0)|int %}
-    set_zoffset
-    M104 S0
-
+    M140 S{bedtemp}
+    M141 S{chambertemp}
+    M104 S{hotendtemp} # start heating asap
     M106 P2 S0
     M106 P3 S0
-    M106 S255
-    G28      
-    M141 S0
-    M140 S{bedtemp}    
-    M106 S0
-    CLEAR_NOZZLE HOTEND={hotendtemp}
-    M190 S{bedtemp}     
-#    M141 S{chambertemp}    
-    M104 S140
-    Z_TILT_ADJUST
-    G29
-    G0 Z50 F600
-    G0 X5 Y5  F6000
-    
-    {% if chambertemp == 0 %}
-        M106 P3 S255
+    M106 S255 # funny qidi fan dance
+    {% if "y" not in printer.toolhead.homed_axes %} # home XY so we can clean ooze off
+        G28 Y
     {% endif %}
+    {% if "x" not in printer.toolhead.homed_axes %} # home XY so we can clean ooze off
+        G28 X
+    {% endif %}
+    {% if "z" not in printer.toolhead.homed_axes %} # finish the homing
+        G28 Z
+    {% endif %}
+
+    # a quick clean to knock ooze off the nozzle 
+    G1 X95 F12000
+    G1 Y300 F12000
+    G1 Y324 F1000
+
+    TEMPERATURE_WAIT SENSOR=extruder MINIMUM={170} # wait for hotend to get to cleanable temp
+    M104 S140 # and drop temp target instantly
+
+    G1 Y324 E-2 F600
+    G1 Y310 F1200
+    G1 X56 F12000
+    G1 Y310 F12000
+    G1 Y324 F600
+    G1 X95 F600
+    G1 Y325 F6000
+    G1 X{ 130 + (range(-5, 5) | random) / 10 } Y{ 320 + (range(-5, 5) | random) / 10 } F600
+    M400
+    M190 S{bedtemp}   # wait for bed temp
+
+    G1 X95 Y325 F600
+    G1 Y300 F6000
+
+    M106 S0
+    G28 Z
+    Z_TILT_ADJUST
+    G0 Z20
+    G28 Z              # and then do all the leveling things
+    BED_MESH_CALIBRATE PROFILE=adaptive ADAPTIVE=1
+    BED_MESH_PROFILE SAVE=adaptive
+    BED_MESH_PROFILE LOAD=adaptive
+    M104 S{hotendtemp} # start heating to print tempterautre
+    G1 X96 F12000 # park over chute
+    G1 Y325 F6000
+    M109 S{hotendtemp} # once reached, move toolhead out of chute so we don't get stuck in it
+    G1 Y300 F600
+    M400
+    G1 X50 Y300 F12000
+    CLEAR_NOZZLE HOTEND={hotendtemp} COOLDOWN=0 # do the proper cleaning procedure
+    G1 X96 F12000
+    G1 Y300 F12000
+    G1 Y325 F600 # park back over the chute
+
+
+    {% if chambertemp == 0 %} # vent fan on max if chamber heater is not used
+        M106 P3 S255
+    {% else %}
+        G1 X{ 130 + (range(-5, 5) | random) / 10 } Y{ 320 + (range(-5, 5) | random) / 10 } F600
+    {% endif %}
+
+    # wait for all heaters
     M109 S{hotendtemp}
-    M141 S{chambertemp}    
-    M204 S10000
+    M191 S{chambertemp}    
+    # start printing
     SET_PRINT_STATS_INFO CURRENT_LAYER=1
     ENABLE_ALL_SENSOR
     save_last_file
+    G1 Y280 E1 F12000 # make sure we escape the chute
 
 [gcode_macro ENABLE_ALL_SENSOR]
 gcode:
@@ -267,7 +305,7 @@ gcode:
 	SET_STEPPER_ENABLE STEPPER=stepper_x enable=0
 	SET_STEPPER_ENABLE STEPPER=stepper_y enable=0
 	SET_STEPPER_ENABLE STEPPER=stepper_z enable=1
-    SET_STEPPER_ENABLE STEPPER=stepper_z1 enable=1
+        SET_STEPPER_ENABLE STEPPER=stepper_z1 enable=1
 	SET_STEPPER_ENABLE STEPPER=extruder enable=0
 
 # Used for power lose recovery detection
@@ -284,100 +322,12 @@ gcode:
 [delayed_gcode PRINTER_INIT]
 initial_duration:0.2
 gcode:
-	SET_STEPPER_ENABLE STEPPER=stepper_z enable=1
+    SET_STEPPER_ENABLE STEPPER=stepper_z enable=1
     SET_STEPPER_ENABLE STEPPER=stepper_z1 enable=1
     BED_MESH_CLEAR      
     SET_FILAMENT_SENSOR SENSOR=fila ENABLE=0
 
-[homing_override]
-axes:xyz
-gcode: 
-    {% set HOME_CUR = 1 %}
-    {% set driver_config = printer.configfile.settings['tmc2240 stepper_x'] %}
-    {% set RUN_CUR = driver_config.run_current %}
-    {% set HOLD_CUR = driver_config.hold_current %}
-    m204 S10000
-    M220 S100
-	{% if params.X is defined %}
-	    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR * 0.7} 
-        G28 X
-		SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR}     
-        BEEP I=1 DUR=100       
-        G1 X10 F1200
-    {% endif %}
 
-    {% if params.Y is defined %}
-		SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CUR * 0.9} 
-		G28 Y
-		SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CUR}  
-        BEEP I=1 DUR=100          
-       G1 Y10 F1200
-    {% endif %}
-
-    {% if params.Z is defined %}
-        G28 x
-        G28 Y
-        G28 X
-        G1 X150 Y150 F7800
-
-        SET_KINEMATIC_POSITION Z={printer.toolhead.axis_maximum.z-30}
-        QIDI_PROBE_PIN_2
-        probe samples=2
-        SET_KINEMATIC_POSITION Z=1.9
-        G1 Z10 F600
-        Z_VIBRATE
-        QIDI_PROBE_PIN_1
-        probe probe_speed=10
-        SET_KINEMATIC_POSITION Z=-0.1
-        G1 Z30 F480
-    {% endif %}
-
-    {% if params.X is undefined %}
-    {% if params.Y is undefined %}
-    {% if params.Z is undefined %}
-        SET_KINEMATIC_POSITION X=0
-        SET_KINEMATIC_POSITION Y=0
-        SET_KINEMATIC_POSITION Z={printer.toolhead.axis_maximum.z-30}
-        G91
-        G1 Z7 F600	
-        G1 X5 F2400
-        G1 Y5 F2400
-        G4 P2000
-    
-       SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR * 0.8} 
-        G28 X
-    	SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR} 
-        BEEP I=1 DUR=100  
-        G1 X45 F1200
-    
-    	SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CUR * 0.9} 
-    	G28 Y
-    	SET_TMC_CURRENT STEPPER=stepper_y CURRENT={HOME_CUR} 
-        BEEP I=1 DUR=100        
-        G1 Y10 F1200
-
-        SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR * 0.8} 
-        G28 X
-    	SET_TMC_CURRENT STEPPER=stepper_x CURRENT={HOME_CUR} 
-        BEEP I=1 DUR=100  
-        G1 X10 F1200
-
-        SET_KINEMATIC_POSITION Z={printer.toolhead.axis_maximum.z-10}
-
-        G90
-        G1 X150 Y150 F7800
-        G91
-        QIDI_PROBE_PIN_2
-        G28 Z
-        G1 Z30  F600
-    {% endif %}
-    {% endif %}
-    {% endif %}
-    SET_TMC_CURRENT STEPPER=stepper_x CURRENT={RUN_CUR} 
-    SET_TMC_CURRENT STEPPER=stepper_y CURRENT={RUN_CUR} 
-    M204 S10000
-    G90
-    QIDI_PROBE_PIN_2
 
 [gcode_macro SHAPER_CALIBRATE]
 rename_existing: RESHAPER_CALIBRATE
@@ -690,77 +640,14 @@ gcode:
         {% endif %}
     {% endif %}
 
-[gcode_macro M4027]
-gcode:
-    G1 X{150 - printer.probe["x_offset"]} Y{150 - printer.probe["y_offset"]} F9000
-    probe
-    SAVE_Z_OFFSET_TO_BED_MESH
-    G1 z10 F600
-    SET_GCODE_OFFSET Z=0 MOVE=1
-    BED_MESH_CALIBRATE
-    G0 Z50 F600
-    G0 X0 Y0 F9000
-    M400
-    M118 Bed mesh calibrate complete
-    SAVE_CONFIG
 
-[gcode_macro M4028]
-gcode:
-    G28 
-    get_zoffset
-    M400
-    M118 Position init complete
-    
-[gcode_macro M4029]
-gcode:
-    M104 S140
-    M141 S0
-    SAVE_VARIABLE VARIABLE=z_offset VALUE=0
-    G28 
-    M400
-    M118 Position init complete
-    
-    CLEAR_NOZZLE HOTEND=280
-    G28
-    get_zoffset
-
-[gcode_macro M4030]
-gcode:    
-    BED_MESH_CLEAR      
-    SET_GCODE_OFFSET Z=0 MOVE=0
-    G28
-    get_zoffset
-    G1 X150 Y150 F9000
-    G1 Z0 F600
-
-[gcode_macro M4031]
-gcode:
-    SET_KINEMATIC_POSITION Z=20
-    G1 Z30 F300
-    SET_TMC_CURRENT STEPPER=stepper_z CURRENT={printer.configfile.settings['tmc2209 stepper_z'].run_current * 0.7 }
-    SET_TMC_CURRENT STEPPER=stepper_z1 CURRENT={printer.configfile.settings['tmc2209 stepper_z1'].run_current * 0.7 }
-    REVERSE_HOMING
-    SET_TMC_CURRENT STEPPER=stepper_z CURRENT={printer.configfile.settings['tmc2209 stepper_z'].run_current}
-    SET_TMC_CURRENT STEPPER=stepper_z1 CURRENT={printer.configfile.settings['tmc2209 stepper_z1'].run_current}
-    G91
-    G1 Z-30 F600
-    G90
-
-    SET_TMC_CURRENT STEPPER=stepper_z CURRENT={printer.configfile.settings['tmc2209 stepper_z'].run_current * 0.7 }
-    SET_TMC_CURRENT STEPPER=stepper_z1 CURRENT={printer.configfile.settings['tmc2209 stepper_z1'].run_current * 0.7 }
-    REVERSE_HOMING
-    SET_TMC_CURRENT STEPPER=stepper_z CURRENT={printer.configfile.settings['tmc2209 stepper_z'].run_current}
-    SET_TMC_CURRENT STEPPER=stepper_z1 CURRENT={printer.configfile.settings['tmc2209 stepper_z1'].run_current}
-    G91
-    G1 Z-30 F600
-    G90
 
 [gcode_macro M603]
 description: Unload filament
 gcode:
     {% set hotendtemp = params.S|default(250)|int %}
     {% set accel = printer.toolhead.max_accel|int %}
-    _CG28
+    G28
     M204 S10000
     G1 Y150 F9000
     G1 X305 F9000
@@ -813,7 +700,7 @@ gcode:
     {% set accel = printer.toolhead.max_accel|int %}
     M204 S10000
     M104 S{hotendtemp}
-    _CG28
+    G28
     {% if current_state == 1 %}
         {% if (printer.gcode_move.position.y) > 300 %}
             G91
@@ -856,9 +743,7 @@ gcode:
     M204 S{accel}
     M118 Load finish
 
-[output_pin sound]
-pin:PA1
-value:0
+
 
 [gcode_macro beep_on]
 gcode:
@@ -868,8 +753,7 @@ gcode:
 gcode:
     SET_PIN PIN=sound VALUE=0
 
-[gcode_arcs]
-resolution: 0.5
+
 
 [gcode_macro M109]
 rename_existing: M99109
@@ -881,7 +765,7 @@ gcode:
         TEMPERATURE_WAIT SENSOR=extruder MINIMUM={s} MAXIMUM={s+1}
     {% endif %}
 
-[exclude_object]
+
 
 [gcode_macro G31]
 gcode:
@@ -891,45 +775,6 @@ gcode:
 gcode:
     SET_GCODE_VARIABLE MACRO=G29 VARIABLE=k VALUE=0
 
-[gcode_macro G29]
-variable_k:1
-gcode:
-    {% set temp = printer["heater_generic chamber"].target %}
-    M141 S0
-    {% if temp > 0 %}
-        G4 P15000
-    {% endif %}
-    BED_MESH_CLEAR
-    {% if k|int==1 %}
-        G28   
-        get_zoffset
-        M141 S{temp}
-        G1 X{150 - printer.probe["x_offset"]} Y{150 - printer.probe["y_offset"]} F9000
-        G1 Z10 F600
-        probe
-        SAVE_Z_OFFSET_TO_BED_MESH
-        G1 z10 F600
-        BED_MESH_CALIBRATE PROFILE=kamp
-        SAVE_VARIABLE VARIABLE=profile_name VALUE='"kamp"'
-        G4 P5000
-        SAVE_CONFIG_QD
-    {% else %}
-        g28
-        get_zoffset
-        {% if printer["bed_mesh"].profiles.default %}
-            BED_MESH_PROFILE LOAD=default
-            SAVE_VARIABLE VARIABLE=profile_name VALUE='"default"'
-        {% else %}
-            G1 X{150 - printer.probe["x_offset"]} Y{150 - printer.probe["y_offset"]} F9000
-            G1 Z10 F600
-            probe
-            SAVE_Z_OFFSET_TO_BED_MESH
-            G1 z10 F600
-            _BED_MESH_CALIBRATE PROFILE=default
-            G4 P5000
-            SAVE_CONFIG_QD
-        {% endif %}
-    {% endif %}
 
 [gcode_macro M204]
 rename_existing: M99204
@@ -946,23 +791,5 @@ gcode:
     SET_VELOCITY_LIMIT ACCEL={s}
     SET_VELOCITY_LIMIT ACCEL_TO_DECEL={s/2}
 
-[gcode_macro Z_VIBRATE]
-gcode:
-    m204 S400
-    G90
-    G0 Z4
-    G91
-   #G4 P3000
-     SET_PIN PIN=ctlyd VALUE=1 
-    {% for z in range(1,50) %}
-        G1 Z1 F1200
-#        G4 P50
-        G1 Z-1 F1200
-#       G4 P50
-    {% endfor %}
-    M204 S100
-    SET_PIN PIN=ctlyd VALUE=0
-    G4 P1000
-    G1 Z4
-    G90
+
  
